# dvc-template

./: .gitignore  00_data_preparation.py  01_training.py  02_evaluation.py  99_tuning.py  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
custom_dir/: metrics.json
custom_dir/plots/metrics/: accuracy.tsv
custom_dir/plots/sklearn/: calibration.json  cm.json
data/: .gitignore  Train.csv.dvc
dvclive/: metrics.json  params.yaml  report.md
dvclive/plots/custom/: feature_importance.json  precision_recall.json
dvclive/plots/metrics/: accuracy:test.tsv
dvclive/plots/sklearn/: calibration.json  cm.json  precision_recall.json  roc.json
mlruns/0/: meta.yaml
mlruns/382507748699527496/: meta.yaml
mlruns/382507748699527496/04d462404a6f46568a412f8d710b7819/: meta.yaml
mlruns/382507748699527496/04d462404a6f46568a412f8d710b7819/metrics/: accuracy-test  roc_auc-test
mlruns/382507748699527496/4d5683f3d35a4a61a55f3b4796dd561b/: meta.yaml
mlruns/382507748699527496/549722a293d643c886c2fb74e826aa3c/: meta.yaml
mlruns/382507748699527496/7cd4f132fe3b4a749586ee4938adf6a5/: meta.yaml
mlruns/382507748699527496/b8344acad7f44a0db257b6fb39dbc4d6/: meta.yaml
mlruns/382507748699527496/c6a9dbfb45d34215b2ddc70da940961a/: meta.yaml
mlruns/382507748699527496/e860cfb49fe94c50bd26936998a4cbc5/: meta.yaml
mlruns/382507748699527496/f3c0f76bb73243168caad681b9402f6f/: meta.yaml
mlruns/382507748699527496/ff104e0303a346d9bda224f597b809ae/: meta.yaml
mlruns/models/xgboost/: meta.yaml
mlruns/models/xgboost/version-1/: meta.yaml
(+43 files in other folders)
