[tool.poetry]
name = "dvc-example"
version = "0.1.0"
description = ""
authors = ["Filippo Pellizzari <filippo.pellizzari109@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.3"
dvclive = "^3.3.1"
pyarrow = "^14.0.1"
scipy = "^1.11.3"
xgboost = "^2.0.2"
scikit-learn = "^1.3.2"
dvc-gdrive = "^3.0.0"
optuna = "^3.5.0"
dvc = "^3.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
